Убираем Open Sans, Droid Serif грузим в localstorage

--- a/wp-content/themes/coworker/css/responsive.css
+++ b/wp-content/themes/coworker/css/responsive.css
@@ -52,7 +52,7 @@ div.rs-menu {
     display: block;
     position: relative;
     overflow: hidden;
-    font-family: "Open Sans" ,"Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "fira_sansbook" ,"Helvetica Neue", Helvetica, Arial, sans-serif;
     background-position: left;
     line-height: 40px;
     height: 42px;
