--- a/wp-content/themes/coworker/css/elastic.css
+++ b/wp-content/themes/coworker/css/elastic.css
@@ -61,8 +61,8 @@
     padding: 10px;
     font-size: 18px;
     line-height: 1.3;
-    font-weight: 600;
-    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-family: 'fira_sanssemibold', sans-serif;
     background-color: #57B3DF;
     border-left: 3px solid rgba(0,0,0,0.1);
     color: #FFF;
@@ -71,7 +71,7 @@
 .ei-title h3 span {
     font-size: 13px;
     line-height: 20px;
-    font-family: 'Droid Serif', serif;
+    font-family: 'droid_serifregular', serif;
     font-weight: normal;
     background-color: rgba(11,11,11,0.8) !important;
     border-left: 3px solid #57B3DF;
